Fixel sidebar controls on mobile device

--- a/src/style.css
+++ b/src/style.css
@@ -150,11 +150,13 @@ body.light-mode {
   height: 320px;
 }
 
+
 #vertical-editor,
 #horizontal-editor {
   width: 100%;
   height: 100%;
   cursor: crosshair;
+  touch-action: none;
 }
 
 .label-overlay {
